# mini3d

./: .gitignore  Cargo.toml  README.md  test.lua
mini3d/: Cargo.toml
mini3d/src/: activity.rs  api.rs  app.rs  application.rs  asset.rs  backend.rs  component.rs  content.rs  context.rs  disk.rs  ecs.rs  engine.rs  event.rs  event_recorder.rs  feature.rs  graphics.rs  gui.rs  import.rs  input.rs  instance.rs  io.rs  lib.rs  logger.rs  math.rs  network.rs  physics.rs  platform.rs  prng.rs  process.rs  processor.rs  program.rs  recorder.rs  reflection.rs  registry.rs  renderer.rs  request.rs  resource.rs  rhai.rs  runtime.rs  scene.rs  (+11 more)
mini3d/src/api/: activity.rs  ecs.rs  input.rs  logger.rs  platform.rs  renderer.rs  resource.rs  time.rs
mini3d/src/asset/: bundle.rs  container.rs  error.rs  font.rs  handle.rs  input_action.rs  input_axis.rs  input_table.rs  key.rs  material.rs  mesh.rs  model.rs  reference.rs  rhai_script.rs  script.rs  system_schedule.rs  texture.rs
mini3d/src/backend/: renderer.rs
mini3d/src/component/: component.rs  event.rs  hierarchy.rs  input.rs  local_to_world.rs  renderer.rs  rotator.rs  texture.rs  transform.rs
mini3d/src/content/: asset.rs  component.rs
mini3d/src/content/asset/: material.rs  mesh.rs
mini3d/src/content/component/: model.rs
mini3d/src/content/signal/: command.rs
mini3d/src/content/system/: despawn.rs  free_fly.rs  renderer.rs  rhai.rs  rotator.rs
mini3d/src/context/: asset.rs  error.rs  event.rs  input.rs  procedure.rs  registry.rs  renderer.rs  scene.rs  schedule.rs  scheduler.rs  time.rs  world.rs
mini3d/src/disk/: backend.rs  provider.rs
mini3d/src/ecs/: api.rs  archetype.rs  builder.rs  component.rs  container.rs  context.rs  dynamic.rs  entity.rs  error.rs  instance.rs  pipeline.rs  procedure.rs  query.rs  reference.rs  resource.rs  scene.rs  scheduler.rs  signal.rs  singleton.rs  sparse.rs  system.rs  view.rs  world.rs
mini3d/src/ecs/api/: activity.rs  asset.rs  context.rs  ecs.rs  error.rs  event.rs  input.rs  logger.rs  program.rs  registry.rs  renderer.rs  resource.rs  runtime.rs  system.rs  time.rs
mini3d/src/ecs/component/: camera.rs  dynamic_material.rs  free_fly.rs  free_view.rs  lifecycle.rs  model.rs  profiler.rs  rhai_scripts.rs  rotator.rs  transform.rs  (+1 more)
mini3d/src/event/: asset.rs  input.rs  system.rs
mini3d/src/feature/: asset.rs  common.rs  component.rs  core.rs  input.rs  renderer.rs  system.rs  ui.rs
mini3d/src/graphics/: color.rs  command_buffer.rs  immediate_command.rs  rasterizer.rs
mini3d/src/gui/: navigation_layout.rs
mini3d/src/input/: action.rs  axis.rs  backend.rs  binding.rs  button.rs  control_layout.rs  cursor.rs  direction.rs  event.rs  handle.rs  input_manager.rs  macros.rs  provider.rs  range.rs  resource.rs  server.rs
mini3d/src/logger/: level.rs  provider.rs  server.rs
mini3d/src/math/: fixed.rs  fixed2.rs  mat.rs  quat.rs  rect.rs  vec.rs
mini3d/src/network/: backend.rs  event.rs  provider.rs  server.rs
mini3d/src/platform/: event.rs  provider.rs
mini3d/src/registry/: asset.rs  component.rs  component_type.rs  datatype.rs  error.rs  resource.rs  system.rs
mini3d/src/renderer/: backend.rs  color.rs  command.rs  command_buffer.rs  component.rs  encoder.rs  event.rs  graph.rs  graphics.rs  handle.rs  pass.rs  pipeline.rs  provider.rs  queue.rs  rasterizer.rs  resource.rs  server.rs  types.rs  uniform.rs  vertex.rs
mini3d/src/resource/: container.rs  handle.rs  hook.rs  iterator.rs  key.rs
mini3d/src/rhai/: input.rs  script_storage.rs  world.rs
mini3d/src/runtime/: event.rs  provider.rs
mini3d/src/scene/: component.rs  container.rs  context.rs  entity.rs  query.rs  signal.rs  sparse_set.rs  system.rs  view.rs  world.rs
mini3d/src/script/: compiler.rs  constant.rs  export.rs  frontend.rs  interface.rs  interpreter.rs  mir.rs  module.rs  property.rs  reflection.rs  string.rs  vm.rs
mini3d/src/service/: renderer.rs
mini3d/src/storage/: backend.rs  event.rs  provider.rs  server.rs
mini3d/src/system/: backend.rs  event.rs  provider.rs  server.rs
mini3d/src/ui/: button.rs  checkbox.rs  controller.rs  event.rs  graphics.rs  interaction_layout.rs  label.rs  navigation_layout.rs  profile.rs  sprite.rs  style.rs  user.rs  viewport.rs  widget.rs
mini3d/src/utils/: backend.rs  fixed_size_string.rs  generation.rs  macros.rs  slotmap.rs  string.rs  uid.rs
mini3d_cli/: Cargo.toml
mini3d_cli/src/: main.rs
mini3d_db/: Cargo.toml
mini3d_db/src/: component.rs  container.rs  database.rs  entity.rs  field.rs  lib.rs  query.rs  registry.rs
mini3d_ffi/: Cargo.toml  build.rs  cbindgen.toml  mini3d.h  test.cpp
mini3d_ffi/src/: app.rs  application.rs  event.rs  event_recorder.rs  import.rs  input.rs  lib.rs  renderer.rs  request.rs
mini3d_runtime/: Cargo.toml
mini3d_runtime/src/: api.rs  component.rs  event.rs  import.rs  lib.rs  main.rs
mini3d_runtime/src/component/: component_type.rs  hierarchy.rs  system.rs  transform.rs
mini3d_wgpu/: Cargo.toml
mini3d_wgpu/src/: blit.wgsl  blit_bind_group.rs  blit_pipeline.rs  camera.rs  canvas.rs  canvas_renderer.rs  context.rs  draw_command_buffer.rs  error.rs  flat_pipeline.rs  global_bind_group.rs  global_buffer.rs  global_uniform_buffer.rs  graphics_canvas.rs  graphics_render_pass.rs  graphics_renderer.rs  graphics_surface.rs  instance_uniform_buffer.rs  lib.rs  material_bind_group.rs  mesh_pass.rs  model_buffer.rs  render.wgsl  render_target.rs  renderer.rs  scene.rs  scene.wgsl  scene_pipeline.rs  surface_buffer.rs  texture.rs  vertex_allocator.rs  vertex_buffer.rs  viewport.rs  viewport_bind_group.rs  viewport_buffer.rs  viewport_renderer.rs
mini3d_wgpu/src/shader/: blit.wgsl  canvas_blit.wgsl  canvas_primitive.wgsl  canvas_rect.wgsl  flat.wgsl  graphics_blit.wgsl  graphics_primitive.wgsl  scene.wgsl
mini3d_win32/: Cargo.toml
mini3d_win32/src/: helper.rs  input.rs  main.rs  mouse.rs
mini3d_winit/: Cargo.toml
mini3d_winit/src/: gui.rs  logger.rs  main.rs  mapper.rs  provider.rs  utils.rs  virtual_disk.rs  window.rs
mini3d_winit/src/provider/: input.rs  renderer.rs  storage.rs  system.rs
(+633 files in other folders)
