[workspace]
members = [
    "mini3d_cli",
    "mini3d_core",
    "mini3d_derive",
    "mini3d_ffi",
    "mini3d_gui",
    "mini3d_importer",
    "mini3d_input",
    # "mini3d_os",
    "mini3d_stdlog",
    "mini3d_wgpu",
    "mini3d_win32",
    "mini3d_winit",
]
default-members = ["mini3d_cli"]
resolver = "2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"