[workspace]
members = [
    "mini3d_derive",
    "mini3d_math",
    "mini3d_utils",
    "mini3d_serialize",
    "mini3d_asset",
    # "mini3d_ffi",

    "mini3d_runtime",
    "mini3d_scheduler",
    "mini3d_db",
    "mini3d_input",
    "mini3d_renderer",
    "mini3d_logger",
    "mini3d_io",

    "mini3d_cli",
    # "mini3d_gui",
    # "mini3d_importer",
    # "mini3d_mapper",
    # "mini3d_stdlog",
    # "mini3d_wgpu",
    # "mini3d_winit",
]
default-members = ["mini3d_cli"]
resolver = "2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"