[package]
name = "mini3d"
version = "0.1.0"
authors = ["Thomas <thomas.bechet.pro@gmail.com>"]
edition = "2021"

[dependencies]
bitvec = "1.0.1"
glam = "0.21.3"
slotmap = "1.0.6"
hecs = "0.9.0"
serde = "1.0.144"
anyhow = "1.0.65"
rand = "0.8.5"
rhai = { version = "1.10.1", features = ["only_i32", "f32_float"] }