[package]
name = "mini3d"
version = "0.1.0"
authors = ["Thomas <thomas.bechet.pro@gmail.com>"]
edition = "2021"

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
const-fnv1a-hash = "1.1.0"
glam = { version = "0.21.3", features = ["serde"] }
slotmap = { version = "1.0.6", features = ["serde"] }
hecs = { version = "0.9.0", features = ["serde", "column-serialize"] }
serde = "1.0.144"
erased-serde = "0.3.23"
anyhow = "1.0.65"
rand = "0.8.5"
rhai = { version = "1.10.1", features = ["only_i32", "f32_float"] }