[package]
name = "mini3d"
version = "0.1.0"
authors = ["Thomas <thomas.bechet.pro@gmail.com>"]
edition = "2021"

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
const-fnv1a-hash = "1.1.0"
glam = { version = "0.21.3", features = ["serde"] }
serde = "1.0.144"
serde_json = "1.0.91"
erased-serde = "0.3.23"
anyhow = "1.0.65"
rand = "0.8.5"
rapier3d = "0.16.1"