[package]
name = "mini3d_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "mini3d"
crate-type = ["cdylib"]

[dependencies]
mini3d_core = { path = "../mini3d_core" }
mini3d_os = { path = "../mini3d_os" }
mini3d_wgpu = { path = "../mini3d_wgpu" }
mini3d_importer = { path = "../mini3d_importer" }
raw-window-handle = "0.4.3"
libc="0.2.132"

[build-dependencies]
cbindgen = "0.24.3"