[package]
name = "mini3d_win32"
version = "0.1.0"
edition = "2021"

[dependencies]
native-windows-gui = { version = "1.0.13", features = ["cursor", "raw-win-handle", "animation-timer"] }
native-windows-derive = "1.0.5"
raw-window-handle = "0.5.0"
winapi = "0.3.9"
gilrs = { version = "0.10.4", features = ["serde-serialize"] }
serde = { version = "1.0.193", features = ["derive"] }
mini3d_core = { path = "../mini3d_core" }
mini3d_wgpu = { path = "../mini3d_wgpu" }
mini3d_importer = { path = "../mini3d_importer" }
mini3d_input = { path = "../mini3d_input" }
mini3d_stdlog = { path = "../mini3d_stdlog" }

[build-dependencies]
embed-manifest = "1.3.1"