[package]
name = "mini3d_winit"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.27.3", features = ["serde"] }
wgpu = "0.13.1"
egui = "0.19"
egui_extras = "0.19.0"
egui_wgpu_backend = "0.19"
egui_winit_platform = "0.16"
gilrs = { version = "0.9.0", features = ["serde-serialize"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
postcard = { version = "1.0.2", features = ["alloc"] }
bincode = "1.3.3"
miniz_oxide = "0.6.2"
mini3d = { path = "../mini3d" }
mini3d_os = { path = "../mini3d_os" }
mini3d_wgpu = { path = "../mini3d_wgpu" }
mini3d_utils = { path = "../mini3d_utils" }