[package]
name = "mini3d_winit"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.27.3", features = ["serde"] }
wgpu = "0.14.2"
egui = "0.20"
egui_extras = "0.20.0"
egui-wgpu = "0.20.0"
egui-winit = "0.20.0"
gilrs = { version = "0.9.0", features = ["serde-serialize"] }
serde = { version = "1.0.145", features = ["derive"] }
postcard = { version = "1.0.2", features = ["alloc"] }
serde_json = "1.0.91"
bincode = "1.3.3"
miniz_oxide = "0.6.2"
mini3d_core = { path = "../mini3d_core" }
mini3d_derive = { path = "../mini3d_derive" }
mini3d_os = { path = "../mini3d_os" }
mini3d_wgpu = { path = "../mini3d_wgpu" }
mini3d_import = { path = "../mini3d_import" }
colored = "2.0.4"
chrono = "0.4.30"